--- a/test-new.html
+++ b/test-new.html
@@ -13,6 +13,10 @@
 <script src="https://js.ptengine.com/48tnsyik.js"></script>
     <script src="https://js.ptengine.com/4bc75syh.js">
 </script>
+    <script>
+window._pt_sp_2 = [];
+_pt_sp_2.push('setPVTag,'https://www.chen1126946552.github.io/index.html',replace');
+</script>
 <!-- End Ptengine Tag -->
   </head>
   <body>
