--- a/test-new.html
+++ b/test-new.html
@@ -15,7 +15,7 @@
 </script>
     <script>
 window._pt_sp_2 = [];
-_pt_sp_2.push('setPVTag,'https://www.chen1126946552.github.io/index.html',replace');
+_pt_sp_2.push('setPVTag,"https://www.chen1126946552.github.io/index.html",replace');
 </script>
 <!-- End Ptengine Tag -->
   </head>
