--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-TTPBR7L');</script>
   <!-- End Google Tag Manager -->
-    <!-- Ptengine Tag -->
+    <!-- Ptengine Tag 
 <script src="https://devjs.ptengine.com/70dbqp1l.js"></script>
-    <script src="https://devjs.ptengine.com/12xe5c09.js"></script>
+    <script src="https://devjs.ptengine.com/12xe5c09.js"></script>-->
 <!-- End Ptengine Tag -->
             
     <meta charset="UTF-8">
