--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
 
   gtag('config', 'G-8Z5LM4WKJ5');
 </script>
-    <script src="https://js.ptengine.com/16a80qqh.js">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y543F92LT7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y543F92LT7');
+</script>
+<script src="https://js.ptengine.com/16a80qqh.js">
 </script>
             
     <meta charset="UTF-8">
