--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   gtag('config', 'G-Y543F92LT7');
 </script>
-<script src="https://devjs.ptengine.com/19ky1yoe.js">
+<script src="https://devjs.ptengine.com/19ky1yoe.js?sample-rate=0.2">
 </script>
             
     <meta charset="UTF-8">
