--- a/div1.html
+++ b/div1.html
@@ -237,6 +237,9 @@
 <body>
 <div>
 </div>
+<div>
+    <iframe height="0" width="0" aria-hidden="true" alt="" style="pointer-events: none; height: 0px; width: 0px; position: absolute; padding: 0px; margin: 0px; border: 0px; visibility: hidden;"></iframe>
+</div>
         <!-- 2. 动态注入测试 -->
         <div class="control-section">
             <h3>动态注入测试</h3>
