--- a/div1.html
+++ b/div1.html
@@ -292,6 +292,13 @@
 <div>
     <h2>section标签下的div</h2>
 </div>
+<div>
+    <h2></h2>
+</div>
+<div>
+    <h2>正常标签下的div</h2>
+</div>
+
 
  <div id="shadow-host">
         <!-- 这个div将作为Shadow DOM的宿主元素 -->
