--- a/div1.html
+++ b/div1.html
@@ -359,7 +359,7 @@
         shadowRoot.appendChild(shadowContent);
     </script>
         <!-- 2. 动态注入测试 -->
-        <div class="control-section">
+        <div >
             <h3>动态注入测试</h3>
             <div class="button-group">
                 <h4>非空元素测试</h4>
