--- a/div1.html
+++ b/div1.html
@@ -361,41 +361,8 @@
         <!-- 2. 动态注入测试 -->
         <div >
             <h3>动态注入测试</h3>
-            <div class="button-group">
-                <h4>非空元素测试</h4>
-                <button id="add-sandbox-btn" class="action-button">添加sandbox</button>
-                
-            </div>
-            <div class="button-group">
-                <h4>加载状态占位符测试</h4>
-                <button id="add-component-placeholder-btn" class="action-button">添加组件占位符</button>
-                <button id="add-skeleton-btn" class="action-button">添加骨架屏占位符</button>
-                <button id="add-loading-btn" class="action-button">添加加载动画占位符</button>
-            </div>
-            <div class="button-group">
-                <h4>空元素注释测试</h4>
-                <button id="add-empty-div-btn" class="action-button">添加空div</button>
-                <button id="add-attr-div-btn" class="action-button">添加带属性空div</button>
-                <button id="add-empty-section-btn" class="action-button">添加空section</button>
-                <button id="add-empty-article-btn" class="action-button">添加空article</button>
-                <button id="add-empty-main-btn" class="action-button">添加空main</button>
-                <button id="add-empty-aside-btn" class="action-button">添加空aside</button>
-                <button id="add-single-comment-btn" class="action-button">添加单行注释</button>
-                <button id="add-multi-comment-btn" class="action-button">添加多行注释</button>
-                <button id="add-nested-comment-btn" class="action-button">添加嵌套注释</button>
-                <button id="add-conditional-comment-btn" class="action-button">添加条件注释</button>
-                <button id="add-vue-comment-btn" class="action-button">添加Vue注释标记</button>
-                <button id="add-angular-comment-btn" class="action-button">添加Angular注释标记</button>
-            </div>
-            
-            <div class="button-group">
-                <h4>SCRIPT标签测试</h4>
-                <button id="add-inline-script-btn" class="action-button">添加内联脚本</button>
-                <button id="add-external-script-btn" class="action-button">添加外部脚本</button>
-                <button id="add-dynamic-script-btn" class="action-button">添加动态脚本</button>
-                <button id="add-module-script-btn" class="action-button">添加模块脚本</button>
-                <button id="add-basic-noscript-btn" class="action-button">添加基础noscript</button>
-            </div>
+            <div></div>
+            <button>有内容div</button>
         </div>
     <!-- 1. 基础sandbox容器 -->
     <div class="web-pixels-manager-sandbox" data-sandbox-id="basic">
