--- a/div1.html
+++ b/div1.html
@@ -362,6 +362,7 @@
         <div >
             <h3>动态注入测试</h3>
             <div></div>
+            <button></button>
             <button>有内容div</button>
         </div>
     <!-- 1. 基础sandbox容器 -->
