--- a/div1.html
+++ b/div1.html
@@ -362,9 +362,12 @@
         <div >
             <h3>动态注入测试</h3>
             <div></div>
-            <button></button>
-            <button>有内容div</button>
+            
+            <div>有内容div</div>
         </div>
+    <button></button>
+    <H2></H2>
+    <button>有内容的button</button>
     <!-- 1. 基础sandbox容器 -->
     <div class="web-pixels-manager-sandbox" data-sandbox-id="basic">
         <div class="product-card">
