--- a/div1.html
+++ b/div1.html
@@ -367,6 +367,7 @@
         </div>
     <button></button>
     <H2></H2>
+<H2>有内容</H2>
     <button>有内容的button</button>
     <!-- 1. 基础sandbox容器 -->
     <div class="web-pixels-manager-sandbox" data-sandbox-id="basic">
