--- a/div1.html
+++ b/div1.html
@@ -307,6 +307,7 @@
     <div id="shadow-host2">
         <!-- 这个div将作为Shadow DOM的宿主元素 -->
     </div>
+    <div><p class="test-click clickable">点击我（div > p）</p></div>
     <script>
         // 创建并附加Shadow DOM
         const shadowHost = document.getElementById('shadow-host');
