--- a/div1.html
+++ b/div1.html
@@ -372,7 +372,14 @@
         </section>
       </section>
     </section>
-    <section><section>有内容div</section></section>
+    <section><section></section><section>
+          <script>/* dummy script */</script>
+        <style>.note { color: #888; font-size: 13px; }</style>
+            <link rel="stylesheet" href="#"/>
+            <meta name="viewport" content="width=device-width,initial-scale=1" />
+            <noscript><!-- noscript content --></noscript>
+          <!-- we can't click <script>, so provide a button to simulate clicking the script element -->
+        </section><section>有内容section</section></section>
     <aside>
     <aside class="testcase">
         <aside>
@@ -385,7 +392,14 @@
         </aside>
       </aside>
     </aside>
-    <aside><aside>有内容div</aside></aside>
+    <aside><aside></aside><aside>
+          <script>/* dummy script */</script>
+        <style>.note { color: #888; font-size: 13px; }</style>
+            <link rel="stylesheet" href="#"/>
+            <meta name="viewport" content="width=device-width,initial-scale=1" />
+            <noscript><!-- noscript content --></noscript>
+          <!-- we can't click <script>, so provide a button to simulate clicking the script element -->
+        </aside><aside>有内容aside</aside></aside>
     <main>
     <main class="testcase">
         <main>
@@ -398,7 +412,15 @@
         </main>
       </main>
     </main>
-    <main><main>有内容div</main></main>
+    <main><main></main><main>
+          <script>/* dummy script */</script>
+        <style>.note { color: #888; font-size: 13px; }</style>
+            <link rel="stylesheet" href="#"/>
+            <meta name="viewport" content="width=device-width,initial-scale=1" />
+            <noscript><!-- noscript content --></noscript>
+          <!-- we can't click <script>, so provide a button to simulate clicking the script element -->
+        </main>
+      </main><main>有内容main</main></main>
     <article>
     <article class="testcase">
         <article>
@@ -411,7 +433,15 @@
         </article>
       </article>
     </article>
-    <article><article>有内容div</article></article>
+    <article><article></article><article>
+          <script>/* dummy script */</script>
+        <style>.note { color: #888; font-size: 13px; }</style>
+            <link rel="stylesheet" href="#"/>
+            <meta name="viewport" content="width=device-width,initial-scale=1" />
+            <noscript><!-- noscript content --></noscript>
+          <!-- we can't click <script>, so provide a button to simulate clicking the script element -->
+        </article>
+      </article><article>有内容article</article></article>
      <nav>
     <nav class="testcase">
         <nav>
@@ -424,8 +454,16 @@
         </nav>
       </nav>
     </nav>
-    <nav><nav>有内容div</nav></nav>
-    <nav>
+    <nav><nav></nav><nav>
+          <script>/* dummy script */</script>
+        <style>.note { color: #888; font-size: 13px; }</style>
+            <link rel="stylesheet" href="#"/>
+            <meta name="viewport" content="width=device-width,initial-scale=1" />
+            <noscript><!-- noscript content --></noscript>
+          <!-- we can't click <script>, so provide a button to simulate clicking the script element -->
+        </nav>
+      </nav><nav>有内容nav</nav></nav>
+    <header>
     <header class="testcase">
         <header>
           <script>/* dummy script */</script>
@@ -437,7 +475,14 @@
         </header>
       </header>
     </header>
-    <header><header>有内容div</header></header>
+    <header><header></header><header>
+          <script>/* dummy script */</script>
+        <style>.note { color: #888; font-size: 13px; }</style>
+            <link rel="stylesheet" href="#"/>
+            <meta name="viewport" content="width=device-width,initial-scale=1" />
+            <noscript><!-- noscript content --></noscript>
+          <!-- we can't click <script>, so provide a button to simulate clicking the script element -->
+        </header><header>有内容header</header></header>
     <footer class="testcase">
         <footer>
           <script>/* dummy script */</script>
@@ -449,7 +494,15 @@
         </footer>
       </footer>
     </footer>
-    <footer><footer>有内容div</footer></footer>
+    <footer><footer></footer><footer>
+          <script>/* dummy script */</script>
+        <style>.note { color: #888; font-size: 13px; }</style>
+            <link rel="stylesheet" href="#"/>
+            <meta name="viewport" content="width=device-width,initial-scale=1" />
+            <noscript><!-- noscript content --></noscript>
+          <!-- we can't click <script>, so provide a button to simulate clicking the script element -->
+        </footer>
+      </footer><footer>有内容footer</footer></footer>
     <div>
     <nav class="testcase">
         <nav>
