--- a/div1.html
+++ b/div1.html
@@ -401,7 +401,19 @@
           <!-- we can't click <script>, so provide a button to simulate clicking the script element -->
         </aside><aside>有内容aside</aside></aside>
     <main>
-    <main class="testcase">
+        <main class="testcase">
+            <main>
+            <script>/* dummy script */</script>
+            <style>.note { color: #888; font-size: 13px; }</style>
+            <link rel="stylesheet" href="#"/>
+            <meta name="viewport" content="width=device-width,initial-scale=1" />
+            <noscript><!-- noscript content --></noscript>
+          <!-- we can't click <script>, so provide a button to simulate clicking the script element -->
+            </main>
+          </main>
+    </main>
+    <main>
+        <main></main>
         <main>
           <script>/* dummy script */</script>
         <style>.note { color: #888; font-size: 13px; }</style>
@@ -410,17 +422,8 @@
             <noscript><!-- noscript content --></noscript>
           <!-- we can't click <script>, so provide a button to simulate clicking the script element -->
         </main>
-      </main>
+      <main>有内容main</main>
     </main>
-    <main><main></main><main>
-          <script>/* dummy script */</script>
-        <style>.note { color: #888; font-size: 13px; }</style>
-            <link rel="stylesheet" href="#"/>
-            <meta name="viewport" content="width=device-width,initial-scale=1" />
-            <noscript><!-- noscript content --></noscript>
-          <!-- we can't click <script>, so provide a button to simulate clicking the script element -->
-        </main>
-      </main><main>有内容main</main></main>
     <article>
     <article class="testcase">
         <article>
