--- a/div1.html
+++ b/div1.html
@@ -444,7 +444,7 @@
             <noscript><!-- noscript content --></noscript>
           <!-- we can't click <script>, so provide a button to simulate clicking the script element -->
         </article>
-      </article><article>有内容article</article></article>
+      <article>有内容article</article></article>
      <nav>
     <nav class="testcase">
         <nav>
@@ -465,7 +465,7 @@
             <noscript><!-- noscript content --></noscript>
           <!-- we can't click <script>, so provide a button to simulate clicking the script element -->
         </nav>
-      </nav><nav>有内容nav</nav></nav>
+      <nav>有内容nav</nav></nav>
     <header>
     <header class="testcase">
         <header>
@@ -495,7 +495,6 @@
             <noscript><!-- noscript content --></noscript>
           <!-- we can't click <script>, so provide a button to simulate clicking the script element -->
         </footer>
-      </footer>
     </footer>
     <footer><footer></footer><footer>
           <script>/* dummy script */</script>
@@ -505,7 +504,7 @@
             <noscript><!-- noscript content --></noscript>
           <!-- we can't click <script>, so provide a button to simulate clicking the script element -->
         </footer>
-      </footer><footer>有内容footer</footer></footer>
+      <footer>有内容footer</footer></footer>
     <div>
     <nav class="testcase">
         <nav>
