--- a/div1.html
+++ b/div1.html
@@ -526,6 +526,10 @@
             <div>有内容div</div>
             <a href="https://vivaia.jp/join/?test=a" target="_blank" rel="noopener noreferrer" class="Foot___NavItemA-sc-15y30se-5 eOvXuJ" pt-insert-element="7ba632ac">採用情報</a>
             <a href="https://ptmind.com/join/?test=a" target="_blank" rel="noopener noreferrer" class="Foot___NavItemA-sc-15y30se-5 eOvXuJ" pt-insert-element="7ba632ac">ptmind.com</a>
+            <a href="https://vivaia.jp/join/#test=a" target="_blank" rel="noopener noreferrer" class="Foot___NavItemA-sc-15y30se-5 eOvXuJ" pt-insert-element="7ba632ac">採用情報</a>
+            <a href="https://ptmind.com/join/#test=a" target="_blank" rel="noopener noreferrer" class="Foot___NavItemA-sc-15y30se-5 eOvXuJ" pt-insert-element="7ba632ac">ptmind.com</a>
+            <a href="https://vivaia.jp/join/?test=a#aba" target="_blank" rel="noopener noreferrer" class="Foot___NavItemA-sc-15y30se-5 eOvXuJ" pt-insert-element="7ba632ac">採用情報</a>
+            <a href="https://ptmind.com/join/?test=a#abd" target="_blank" rel="noopener noreferrer" class="Foot___NavItemA-sc-15y30se-5 eOvXuJ" pt-insert-element="7ba632ac">ptmind.com</a>
         </div>
     <button></button>
     <H2></H2>
