--- a/index.html
+++ b/index.html
@@ -295,6 +295,9 @@
   <body>
     <h2>地址</h2>
     <a href="https://www.ptengine.jp/?ptmindtest=meili"> ptengine-jp-meilitest</a>
+
+    <h2>新页签打开地址</h2>
+    <a href="https://www.ptengine.jp/?ptmindtest=meili" target="_blank"> ptengine-jp-meilitest</a>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTPBR7L"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
