--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       gtag('js', new Date());
       gtag('config', 'G-Y543F92LT7');
     </script>
-    <script src="https://devjs.ptengine.com/19ky1yoe.js" sample-rate=99></script>
+    <script src="https://devjs.ptengine.com/7fvr8iz1.js" sample-rate=99></script>
             
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
