--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       gtag('config', 'G-Y543F92LT7');
     </script>
     <script src="https://devjs.ptengine.com/7a80pnx3.js" sample-rate=99></script>
+    <script src="https://devjs.ptengine.com/19ky1yoe.js" sample-rate=99></script>
             
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
