--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       gtag('js', new Date());
       gtag('config', 'G-Y543F92LT7');
     </script>
+    <script src="https://devjs.ptengine.com/7fvr8iz1.js" sample-rate=99></script>
+    <script src="https://devjs.ptengine.com/14jw60qy.js" sample-rate=99></script>
     <script src="https://devjs.ptengine.com/7a80pnx3.js" sample-rate=99></script>
     <script src="https://devjs.ptengine.com/19ky1yoe.js" sample-rate=99></script>
             
