--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       gtag('js', new Date());
       gtag('config', 'G-Y543F92LT7');
     </script>
+    <script src="https://cdn.amplitude.com/script/92be23a58f32a14b496d02c34c2cc0f5.js"></script><script&… 1}));window.amplitude.init('92be23a58f32a14b496d02c34c2cc0f5', {"fetchRemoteConfig":true,"autocapture":{"attribution":true,"fileDownloads":true,"formInteractions":true,"pageViews":true,"sessions":true,"elementInteractions":true,"networkTracking":true,"webVitals":true,"frustrationInteractions":true}});</script>
+ 
     <script src="https://devjs.ptengine.com/7fvr8iz1.js" sample-rate=99></script>
     <script src="https://devjs.ptengine.com/14jw60qy.js" sample-rate=99></script>
     <script src="https://devjs.ptengine.com/7a80pnx3.js" sample-rate=99></script>
