--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
     </script>
     <script src="https://cdn.amplitude.com/script/92be23a58f32a14b496d02c34c2cc0f5.js"></script><script&… 1}));window.amplitude.init('92be23a58f32a14b496d02c34c2cc0f5', {"fetchRemoteConfig":true,"autocapture":{"attribution":true,"fileDownloads":true,"formInteractions":true,"pageViews":true,"sessions":true,"elementInteractions":true,"networkTracking":true,"webVitals":true,"frustrationInteractions":true}});</script>
  
-    <script src="https://devjs.ptengine.com/7fvr8iz1.js" sample-rate=99></script>
-    <script src="https://devjs.ptengine.com/14jw60qy.js" sample-rate=99></script>
     <script src="https://devjs.ptengine.com/7a80pnx3.js" sample-rate=99></script>
-    <script src="https://devjs.ptengine.com/19ky1yoe.js" sample-rate=99></script>
             
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
@@ -299,6 +296,7 @@
   </head>
   <body>
     <h2>地址</h2>
+    <script>ptengine.track('首页',{'时间发生时间戳':Date.now(),'事件发生时间':new Date().toLocaleString(),'事件发生的url':document.location.href})</script>
     <a href="https://www.ptengine.jp/?ptmindtest=meili"> ptengine-jp-meilitest</a>
 
     <h2>新页签打开地址</h2>
