--- a/cart.html
+++ b/cart.html
@@ -332,6 +332,7 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTPBR7L"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    ptengine.track('cart',{'时间发生时间戳':Date.now(),'事件发生时间':new Date().toLocaleString(),'事件发生的url':document.location.href})
     
     <header class="header">
       <div class="container">
