--- a/checkout.html
+++ b/checkout.html
@@ -341,8 +341,8 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTPBR7L"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    ptengine.track('checkout',{'时间发生时间戳':Date.now(),'事件发生时间':new Date().toLocaleString(),'事件发生的url':document.location.href})
     
+     <script>ptengine.track('checkout',{'时间发生时间戳':Date.now(),'事件发生时间':new Date().toLocaleString(),'事件发生的url':document.location.href})</script>
     <header class="header">
       <div class="container">
         <div class="header-content">
