--- a/checkout.html
+++ b/checkout.html
@@ -8,6 +8,9 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-TTPBR7L');</script>
   <!-- End Google Tag Manager -->
+  <script src="https://cdn.amplitude.com/script/92be23a58f32a14b496d02c34c2cc0f5.js"></script>
+  <script>window.amplitude.add(window.sessionReplay.plugin({sampleRate: 1}));window.amplitude.init('92be23a58f32a14b496d02c34c2cc0f5', {"fetchRemoteConfig":true,"autocapture":{"attribution":true,"fileDownloads":true,"formInteractions":true,"pageViews":true,"sessions":true,"elementInteractions":true,"networkTracking":true,"webVitals":true,"frustrationInteractions":true}});</script>
+  <script src="https://devjs.ptengine.com/7a80pnx3.js"></script>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -336,6 +339,9 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTPBR7L"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+  <script>
+    ptengine.track('结算',{'时间发生时间戳':Date.now(),'事件发生时间':new Date().toLocaleString(),'事件发生的url':document.location.href});
+  </script>
 
   <!-- 头部导航 -->
   <header class="header">
@@ -727,6 +733,20 @@
 
       const orderId = generateOrderId();
       const total = subtotal + shippingCost;
+      
+      // Ptengine 事件追踪 - 提交订单
+      ptengine.track('提交订单', {
+        '时间发生时间戳': Date.now(),
+        '事件发生时间': new Date().toLocaleString(),
+        '事件发生的url': document.location.href,
+        '订单号': orderId,
+        '商品总额': subtotal,
+        '运费': shippingCost,
+        '订单总额': total,
+        '商品数量': checkoutItems.reduce((sum, item) => sum + item.quantity, 0),
+        '支付方式': document.querySelector('input[name="payment"]:checked').value,
+        '配送方式': document.querySelector('input[name="shipping"]:checked').value
+      });
 
       // 收集订单信息
       const orderInfo = {
@@ -764,6 +784,16 @@
           quantity: item.quantity,
           index: i
         }))
+      });
+      
+      // Ptengine 事件追踪 - 购买完成
+      ptengine.track('购买完成', {
+        '时间发生时间戳': Date.now(),
+        '事件发生时间': new Date().toLocaleString(),
+        '事件发生的url': document.location.href,
+        '订单号': orderId,
+        '订单总额': total,
+        '商品数量': checkoutItems.reduce((sum, item) => sum + item.quantity, 0)
       });
 
       // 清空购物车中已购买的商品
